@@ -1,108 +1,134 @@
-
 package com.paymii.backend.services.implementation;
 
-import com.paymii.backend.dtos.user.*;
+import com.google.firebase.auth.FirebaseToken;
+import com.paymii.backend.dtos.user.RegisterUserRequest;
+import com.paymii.backend.dtos.user.UpdateUserProfileRequest;
+import com.paymii.backend.dtos.user.UserDto;
 import com.paymii.backend.entities.User;
-import com.paymii.backend.exceptions.*;
-import com.paymii.backend.mappers.UserMapper;
+import com.paymii.backend.mappers.UsersMapper;
 import com.paymii.backend.repositories.UserRepository;
 import com.paymii.backend.services.UserService;
-import com.paymii.backend.utils.JwtUtil;
 import lombok.RequiredArgsConstructor;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.web.bind.annotation.GetMapping;
 
+import java.time.Instant;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
-    private final UserRepository  userRepository;
-    private final UserMapper      userMapper;
-    private final PasswordEncoder passwordEncoder;
-    private final JwtUtil         jwtUtil;
+    private final UserRepository userRepository;
+    private final UsersMapper usersMapper;
 
+    // Create user if not exists, else return existing user
     @Override
-    @Transactional
-    public UserDto register(RegisterUserRequest request) {
-        if (userRepository.existsByEmail(request.getEmail())) {
-            throw new EmailAlreadyExistsException("Email already in use: " + request.getEmail());
+    public UserDto getOrCreateUserByFirebaseToken(FirebaseToken token) {
+        String firebaseUid = token.getUid();
+        String email = token.getEmail();
+
+        Optional<User> userOpt = userRepository.findByFirebaseUid(firebaseUid);
+        User user;
+        if (userOpt.isPresent()) {
+            user = userOpt.get();
+        } else {
+            user = User.builder()
+                    .firebaseUid(firebaseUid)
+                    .email(email)
+                    .createdAt(Instant.now())
+                    .updatedAt(Instant.now())
+                    .build();
+            user = userRepository.save(user);
         }
-        User user = userMapper.toEntity(request);
-        user.setPassword(passwordEncoder.encode(request.getPassword()));
-        user.setRole("USER");
-        user.setIsVerified(false);
-        User saved = userRepository.save(user);
-        return userMapper.toDto(saved);
+        return usersMapper.toDto(user);
+    }
+
+    // Update profile
+    @Override
+    public UserDto updateUserProfile(FirebaseToken token, UpdateUserProfileRequest request) {
+        String firebaseUid = token.getUid();
+
+        User user = userRepository.findByFirebaseUid(firebaseUid)
+                .orElseThrow(() -> new RuntimeException("User not found!"));
+
+        // Only update allowed fields
+        if (request.getFirstName() != null) user.setFirstName(request.getFirstName());
+        if (request.getLastName() != null) user.setLastName(request.getLastName());
+        if (request.getProfilePhoto() != null) user.setProfilePhoto(request.getProfilePhoto());
+
+        user.setUpdatedAt(Instant.now());
+        user = userRepository.save(user);
+
+        return usersMapper.toDto(user);
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public AuthResponse login(UserLoginRequest request) {
-        User user = (User) userRepository.findByEmail(request.getEmail())
-                .orElseThrow(() -> new InvalidCredentialsException("Invalid email or password"));
-        if (!passwordEncoder.matches(request.getPassword(), user.getPassword())) {
-            throw new InvalidCredentialsException("Invalid email or password");
-        }
-        String token = jwtUtil.generateToken(user.getId(), user.getEmail());
-        return userMapper.toAuthResponse(user, token);
+    public Long getUserIdFromFirebaseUid(String uid) {
+        return userRepository.findByFirebaseUid(uid)
+                .map(User::getId)
+                .orElse(null);
     }
 
     @Override
-    @Transactional
-    public UserDto update(Long id, UpdateUserRequest request) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found with id: " + id));
-        if (request.getEmail() != null
-                && !request.getEmail().equals(user.getEmail())
-                && userRepository.existsByEmail(request.getEmail())) {
-            throw new EmailAlreadyExistsException("Email already in use: " + request.getEmail());
-        }
-        userMapper.updateEntityFromDto(request, user);
-        User saved = userRepository.save(user);
-        return userMapper.toDto(saved);
+    public UserDto registerUser(FirebaseToken token, RegisterUserRequest request) {
+        String firebaseUid = token.getUid();
+        String emailFromToken = token.getEmail();
+        boolean emailVerified = token.isEmailVerified();
+
+        // Prefer email from token
+        String email = emailFromToken != null ? emailFromToken : request.getEmail();
+
+        // Check if user already exists
+        User user = userRepository.findByFirebaseUid(firebaseUid)
+                .orElseGet(() -> {
+                    User newUser = User.builder()
+                            .firebaseUid(firebaseUid)
+                            .email(email)
+                            .firstName(request.getFirstName())
+                            .lastName(request.getLastName())
+                            .verified(emailVerified)
+                            .build();
+                    return userRepository.save(newUser);
+                });
+
+        return toDto(user);
     }
 
-    @Override
-    @Transactional
-    public void changePassword(Long id, ChangePasswordRequest request) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found with id: " + id));
-
-        if (!passwordEncoder.matches(request.getCurrentPassword(), user.getPassword())) {
-            throw new InvalidCredentialsException("Current password is incorrect");
-        }
-
-        user.setPassword(passwordEncoder.encode(request.getNewPassword()));
-        userRepository.save(user);
+    private UserDto toDto(User user) {
+        UserDto dto = new UserDto();
+        dto.setId(user.getId());
+        dto.setFirebaseUid(user.getFirebaseUid());
+        dto.setFirstName(user.getFirstName());
+        dto.setLastName(user.getLastName());
+        dto.setEmail(user.getEmail());
+        dto.setVerified(user.isVerified());
+        return dto;
     }
 
-
-    @Transactional
-    @Override
-    public void deleteUser(Long id) {
-        if (!userRepository.existsById(id)) {
-            throw new UserNotFoundException("User not found with id: " + id);
-        }
-        userRepository.deleteById(id);
-    }
-
-    @Transactional(readOnly = true)
-    @Override
-    public UserDto getUserById(Long id) {
-        User user = userRepository.findById(id)
-                .orElseThrow(() -> new UserNotFoundException("User not found with id: " + id));
-        return userMapper.toDto(user);
-    }
-    @Transactional(readOnly = true)
     @Override
     public List<UserDto> getAllUsers() {
         return userRepository.findAll()
                 .stream()
-                .map(userMapper::toDto)
-                .toList();
+                .map(usersMapper::toDto)
+                .collect(Collectors.toList());
     }
 
+    @Override
+    public UserDto getUserById(Long id) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        return usersMapper.toDto(user);
+    }
 
+    @Override
+    public UserDto getUserByEmail(String email) {
+        User user = userRepository.findByEmail(email)
+                .orElseThrow(() -> new RuntimeException("User not found"));
+        return usersMapper.toDto(user);
+    }
 }
+
+
+
